<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.SwitchPreferenceCompat
        android:key="settings_auto_freeze_service"
        android:title="@string/settings_auto_freeze_service"
        android:summary="@string/settings_auto_freeze_service_desc" />

    <androidx.preference.DropDownPreference
        android:dependency="settings_auto_freeze_service"
        android:key="settings_auto_freeze_scope"
        android:title="@string/settings_auto_freeze_scope" />

    <androidx.preference.DropDownPreference
        android:dependency="settings_auto_freeze_service"
        android:key="settings_auto_freeze_delay"
        android:title="@string/settings_auto_freeze_delay" />

    <androidx.preference.SwitchPreferenceCompat
        android:dependency="settings_auto_freeze_service"
        android:key="settings_dont_freeze_foreground"
        android:title="@string/settings_dont_freeze_foreground"
        android:summary="@string/settings_dont_freeze_foreground_desc" />

    <androidx.preference.Preference
        android:key="settings_unfreeze_all"
        android:title="@string/unfreeze_all"
        android:summary="@string/settings_unfreeze_all_desc" />

    <androidx.preference.Preference
        android:key="settings_freeze_all"
        android:title="@string/freeze_all"
        android:summary="@string/settings_freeze_all_desc" />

    <androidx.preference.Preference
        android:key="settings_create_unfreeze_all_shortcut"
        android:title="@string/create_unfreeze_all_shortcut" />

    <androidx.preference.Preference
        android:key="settings_create_freeze_all_shortcut"
        android:title="@string/create_freeze_all_shortcut" />

    <androidx.preference.PreferenceCategory
        android:key="settings_auto_freeze_list"
        android:title="@string/settings_auto_freeze_list" />

</androidx.preference.PreferenceScreen>
