<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.Preference
        android:key="settings_removal_wipe"
        android:icon="@drawable/ic_delete"
        android:title="@string/settings_removal_wipe"
        android:summary="@string/settings_removal_wipe_desc" />

    <androidx.preference.Preference
        android:key="settings_removal_backup"
        android:icon="@drawable/ic_upload"
        android:title="@string/settings_removal_backup"
        android:summary="@string/settings_removal_backup_desc"
        app:fragment="io.gatekeeper.ui.settings.BackupSettingsFragment" />

    <androidx.preference.Preference
        android:key="settings_removal_safe"
        app:iconSpaceReserved="false"
        android:selectable="false"
        android:summary="@string/settings_removal_safe" />

</androidx.preference.PreferenceScreen>
